<resources>
    <string name="app_name">MQTT client</string>
    <string name="enter_server_uri">Enter server URI</string>
    <string name="enter_client_id">Enter client ID</string>
    <string name="enter_server_port">Enter server port</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_server_a_io_key">Enter server A-IO key</string>
    <string name="create_connection">Create Connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="light_3">Light 3</string>
</resources>
